<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.babken.learnenglish.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textColor="@color/White"
            android:textSize="40sp"/>
        <TextView
            android:text="@string/categoryone"
            android:background="@color/colorBlackLight"
            android:textColor="@color/White"
            android:id="@+id/textViewHome"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_width="300dp"
            />
        <ImageButton
            android:id="@+id/update1"
            android:background="@drawable/update"
            android:layout_width="50dp"
            android:layout_height="50dp"
            />
</LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
           >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textColor="@color/White"
                    android:textSize="40sp"/>
                <TextView
                    android:background="@color/colorBlackLight"
                    android:textColor="@color/White"
                    android:id="@+id/textViewWork"
                    android:text="@string/categorytwo"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"

                    />
                <ImageButton
                    android:id="@+id/update2"
                    android:background="@drawable/update"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:textColor="@color/White"
                    android:textSize="40sp"/>
                <TextView
                    android:background="@color/colorBlackLight"
                    android:textColor="@color/White"
                    android:id="@+id/textViewStreet"
                    android:text="@string/categorythree"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"/>

                <ImageButton
                    android:id="@+id/update3"
                    android:background="@drawable/update"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:textColor="@color/White"
                    android:textSize="40sp"/>
                <TextView
                    android:background="@color/colorBlackLight"
                    android:textColor="@color/White"
                    android:id="@+id/textViewFilms"
                    android:text="@string/categoryfour"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    />

                <ImageButton
                    android:id="@+id/update4"
                    android:background="@drawable/update"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textColor="@color/White"
                    android:textSize="40sp"/>
                <TextView
                    android:background="@color/colorBlackLight"
                    android:textColor="@color/White"
                    android:id="@+id/textViewOther"
                    android:text="@string/categoryfive"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    />

                <ImageButton
                    android:id="@+id/update5"
                    android:background="@drawable/update"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    />
        </LinearLayout>



        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            >
                <EditText
                    android:background="@color/White"
                    android:id="@+id/change_edit_1"
                    android:hint="write name"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:visibility="invisible"

                    />
                <Button
                    android:id="@+id/change_button_1"
                    android:text="@string/change"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:visibility="invisible"/>

        </LinearLayout>


        <Button
          android:layout_marginTop="10dp"
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorBlack"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:text="@string/add"
            />


</LinearLayout>


